# sysadmin

./: .gitignore  Makefile  README.check_restricted_datasets.md  README.md  README.repoupdater.md  affected_codes.txt  affected_repository_branches.csv  check_restricted_datasets.py  client.py  codelist_deltas.tsv  config.yaml  cronjob.sh  deltas.csv  dmd_affected_jobs.py  dmd_impact.csv  dotenv-sample  find_affected_repository_branches.sh  find_betweens.py  find_old_dmd_allbranches.sh  get_latest_commit.sh  justfile  latest_commit.csv  manage-github.py  offsets.csv  pyproject.toml  repoupdater.py  requirements.in  requirements.txt  results_offset.json  results_sameday.json  sameday.csv  scan-for-icu.sh  workspace_jobs.csv
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: tpp-reboot.md
.github/workflows/: otel-gateway-deploy.yaml  (+2 more)
docs/: github_redaction_failure.md  otel-collector-config.yaml  otel-collector-runbook.md
dummy-bench/: .gitignore  README.md  clone_non_main.py  cloned_non_main.csv  copy_metadata_logs.py  dummy_csv_analysis.py  dummy_logs_to_csv.py  dummy_matches_columns.csv  dummy_matches_no_batches.csv  dummy_matches_wide.csv  ehrql-actions-non-main  ehrql.patch  find_ehrql_actions.py  os_definition.py  pyproject.toml  run_ehrql_actions.py
repoupdater/: client.py  justfile  pyproject.toml  repoupdater.py
services/: README.md
services/otel-gateway/: .gitignore  Dockerfile  README.md  app.json  config.yaml  docker-compose.yml  dotenv-sample  generate.py  justfile  mock-grafana-config.yaml  mock-honeycomb-config.yaml  pyproject.toml  tests.py
(+5 files in other folders)
